--- a/package.json
+++ b/package.json
@@ -1,60 +1,53 @@
 {
   "name": "toxin",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --config ./build/webpack.dev.conf.js",
-    "build": "webpack --config ./build/webpack.build.conf.js"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 3 version"
-  ],
-  "author": "https://github.com/vedees",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vedees/webpack-template-pug.git"
-  },
-  "bugs": {
-    "url": "https://github.com/vedees/webpack-template-pug/issues"
+    "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+    "stylelint": "stylelint \"./**/*{.css,.scss}\"",
+    "stylelint:fix": "stylelint \"./**/*{.css,.scss}\" --fix"
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.2",
-    "css-loader": "^3.6.0",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "file-loader": "^4.3.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.2",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^2.1.2",
-    "pug": "^2.0.4",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.1.4",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
+    "postcss-preset-env": "^7.0.1",
+    "postcss-scss": "^4.0.2",
+    "prettier": "^2.4.1",
+    "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.3.0",
-    "stylelint": "^13.7.2",
+    "sass-loader": "^12.3.0",
+    "sass-resources-loader": "^2.2.4",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.1.0",
     "stylelint-config-airbnb": "0.0.0",
-    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.18.0",
-    "webpack": "~4.41.6",
-    "webpack-cli": "~3.3.12",
-    "webpack-dev-server": "~3.9.0",
-    "webpack-merge": "~4.2.2"
+    "stylelint-order": "^5.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.0.0",
+    "thread-loader": "^3.0.4",
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "nouislider": "^14.6.3",
+    "imask": "^6.2.2",
+    "nouislider": "^15.5.0",
     "wnumb": "^1.2.0"
   }
 }
