--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.4",
     "html-webpack-plugin": "^5.5.0",
+    "image-webpack-loader": "^8.0.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.11",
