--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.4",
     "eslint": "^8.3.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.25.3",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.0.1",
     "mini-css-extract-plugin": "^2.4.5",
@@ -34,7 +36,6 @@
     "sass-resources-loader": "^2.2.4",
     "style-loader": "^3.3.1",
     "stylelint": "^14.1.0",
-    "stylelint-config-airbnb": "0.0.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-order": "^5.0.0",
