--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
     "stylelint": "stylelint \"./**/*{.css,.scss}\"",
-    "stylelint:fix": "stylelint \"./**/*{.css,.scss}\" --fix"
+    "stylelint:fix": "stylelint \"./**/*{.css,.scss}\" --fix",
+    "lint": "eslint ."
   },
   "license": "MIT",
   "devDependencies": {
