--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,14 @@
   "useTabs": false,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "overrides": [
+    {
+      "files": "*.pug",
+      "options": {
+        "parser": "pug",
+        "singleQuote": false,
+      }
+    }
+  ]
 }
