--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
+    "@prettier/plugin-pug": "^1.19.2",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
@@ -30,7 +31,7 @@
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^7.0.1",
     "postcss-scss": "^4.0.2",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "sass-loader": "^12.3.0",
@@ -48,9 +49,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "air-datepicker": "^3.1.0",
     "imask": "^6.2.2",
     "nouislider": "^15.5.0",
-    "wnumb": "^1.2.0",
-    "air-datepicker": "^3.1.0"
+    "wnumb": "^1.2.0"
   }
 }
