--- a/package.json
+++ b/package.json
@@ -11,47 +11,47 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@prettier/plugin-pug": "^1.19.2",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@prettier/plugin-pug": "^2.1.0",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.1.4",
-    "eslint": "^8.3.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "eslint": "^8.18.0",
     "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
-    "image-webpack-loader": "^8.0.1",
-    "mini-css-extract-plugin": "^2.4.5",
-    "node-sass": "^6.0.1",
-    "postcss": "^8.3.11",
-    "postcss-loader": "^6.2.0",
-    "postcss-preset-env": "^7.0.1",
-    "postcss-scss": "^4.0.2",
-    "prettier": "^2.5.1",
+    "image-webpack-loader": "^8.1.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "postcss-preset-env": "^7.7.1",
+    "postcss-scss": "^4.0.4",
+    "prettier": "^2.7.1",
     "pug": "^3.0.2",
-    "pug-loader": "^2.4.0",
-    "sass-loader": "^12.3.0",
-    "sass-resources-loader": "^2.2.4",
+    "sass-loader": "^13.0.0",
+    "sass-resources-loader": "^2.2.5",
+    "simple-pug-loader": "^0.2.1",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.1.0",
+    "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
-    "stylelint-scss": "^4.0.0",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0",
+    "stylelint-scss": "^4.2.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "air-datepicker": "^3.1.0",
-    "imask": "^6.2.2",
-    "nouislider": "^15.5.0",
+    "air-datepicker": "^3.2.0",
+    "imask": "^6.4.2",
+    "nouislider": "^15.6.0",
     "wnumb": "^1.2.0"
   }
 }
